Version 6.0.0
- Added bytecode options to menus
- Built flexprop binary for MacOS

Version 5.4.1
- Updated loadp2 to scan more serial ports on Windows

Version 5.4.0
- Passed tab settings to flexspin to work around some indentation issues in Spin

Version 5.3.2
- Extended checks for saving modified files to include new files
- Modified terminal programs to also exit on Control-Z

Version 5.3.1
- Added a special menu item for the command shell

Version 5.3.0
- Added syntax highlighting for keywords with just first letter capitalized
- Fixed saving of compiler output window font
- Removed dependency on openspin for P1 builds
- Made PropLoader use ^] to exit instead of ESC
- Made PropLoader terminal use VT-100 sequences
- Merged PropLoader with latest from Parallax
- Updated loadp2

Version 5.1.1
- Tweaked source to work better on Tcl 5.1.1
- Added new sample "shell" for copying files between host and P2

Version 5.1.0
- Added sanity checks to avoid problems closing the program
- Made the search/replace box leave the last typed thing selected

Version 5.0.6
- Added links to Parallax documentation under Help menu
- Made help text for GUI wrap
- Removed search hilight when search window is closed

Version 5.0.4
- Added tooltips for open file tabs
- Use $HOME/.flexprop.config for the config file location on Windows too

Version 5.0.3
- Added Changelogs to documentation
- Updated loadp2 to have -DTR and -RTS options

Version 5.0.1
- Disabled P2a buttons
- Enabled ANSI console mode for P1 loader in Windows
- On Linux and Mac, use $HOME for config file location

Version 5.0.0
- Renamed "fastspin" to "flexspin"
- Added new simpletools samples from Roy Eltham
- Added option for using fixed point to GUI
- Removed upython sample

Version 4.5.0
- Renamed to FlexProp
- Added C time sample

Version 4.4.0
- Changed help window to be separate rather than a tab
- Made listing window editable
- Removed "-fs 14" from terminal-emulator command line

Version 4.3.1