@@ -1,6 +1,8 @@
 Version 6.0.0
 - Added bytecode options to menus
+- Added character set options to menus
 - Built flexprop binary for MacOS
+- Used new version of loadp2 with different timeout routines
 
 Version 5.4.1
 - Updated loadp2 to scan more serial ports on Windows
